---------------------------------------------26 / 08 / 2015----------------------------------------------------

The problem of uppercases characters in the installation script has been solved .

---------------------------------------------19 / 04 / 2016----------------------------------------------------

Removed Inguma from the menu to bypass issue with installation (By Jayson Grace : https://github.com/l50)